k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ghs-ingress
  namespace: ghs

  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ghs-ingress-global-ip"

spec:
  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Auth service
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          # Attendance service
          - path: /api/attendances
            pathType: Prefix
            backend:
              service:
                name: attendance-service
                port:
                  number: 8084

          # Announcement service
          - path: /api/announcements
            pathType: Prefix
            backend:
              service:
                name: announcement-service
                port:
                  number: 8088
